--- a/css/index.css
+++ b/css/index.css
@@ -19,24 +19,24 @@ header
   left: 0;
   width: 100%;
   padding: 20px 100px;
-  z-index: 1000;
+  z-index: 100;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 .showcase
 {
-  position: absolute;
+  position: inherit;
   right: 0;
   width: 100%;
-  min-height: 100vh;
+  min-height: 500px;
   padding: 100px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #111;
   transition: 0.5s;
   z-index: 2;
+  
 }
 
 .showcase.active
@@ -53,6 +53,7 @@ header
   height: 100%;
   object-fit: cover;
   opacity: 0.8;
+  min-height:600px;
 }
 .overlay
 {
@@ -68,6 +69,7 @@ header
 {
   position: relative;
   z-index: 10;
+  padding-top: 70px;
 }
 
 .text h2
@@ -137,7 +139,7 @@ display: inline-block;
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 2;
+  z-index: 10000;
   top: 0;
   left: 0;
   background-color: rgb(15, 239, 255);
