--- a/css/index.css
+++ b/css/index.css
@@ -62,7 +62,7 @@ header
   left: 0;
   width: 100%;
   height: 100%;
-  background: #fc9b63;
+  background: #f88340;
   mix-blend-mode: overlay;
   min-height: 900px;
 }
